# BlockMaster

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
blocksmith/: __init__.py  blueprints.py  dataset.py  deploy.py  io_minecraft.py  nav.py  planner.py  policy.py  train.py  world.py
blocksmith_v2_all/: Dockerfile  compose.yml  mypy.ini  ruff.toml
blocksmith_v2_all/blocksmith/: actions.py  blueprints.py  cli.py  deploy.py  metrics.py  policy.py  train.py
blocksmith_v2_all/tests/: test_actions.py  test_blueprints.py  test_metrics.py  test_nav.py  test_policy_mask.py
dashboard/: app.py
notebooks/: README.md
