[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blocksmith"
version = "0.3.0"
description = "Hierarchical Minecraft builder with movement, macros, metrics, CI, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "typing_extensions>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.8",
  "ruff>=0.3.0",
]
dash = [
  "streamlit>=1.35",
]

[project.scripts]
blocksmith = "blocksmith.cli:main"
